--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,3 +8,4 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+@import url('https://fonts.googleapis.com/css2?family=Mystery+Quest&display=swap');
